# vapoursynth-fluxsmooth

./: Makefile.am  configure.ac  readme.rst
src/: fluxsmooth.c
